# tasks-tech-challenge

./: .gitignore  README.md
backend/: .env.example  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yaml  docker-entrypoint.sh  nginx.conf  pyproject.toml  setup.cfg
backend/postman/: Tasks API.postman_collection.json
backend/server/core/: asgi.py  authentications.py  exceptions.py  jwt.py  settings.py  urls.py  wsgi.py
backend/server/tasks/: models.py  serializers.py  urls.py  views.py
backend/server/tasks/migrations/: 0001_initial.py
backend/server/tasks/tests/: test_endpoints.py
backend/server/user_profiles/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/server/user_profiles/migrations/: 0001_initial.py
backend/server/user_profiles/tests/: test_endpoints.py
frontend/app/: layout.tsx  page.tsx
frontend/app/actions/: login.ts  signup.ts  tasks.ts
frontend/app/home/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/Pagination/: Pagination.tsx
frontend/components/TaskBoard/: TaskBoard.tsx
frontend/components/TaskDialog/: TaskDialog.tsx  index.ts
frontend/components/Toast/: Toast.tsx
frontend/services/: authCookies.ts
